# OC

./: .gitignore
lab1/: CMakeLists.txt
lab1/scripts/: build_linux.sh
lab2/proc-runner/examples/: proc_test.cpp
lab2/proc-runner/src/: proc_runner.cpp
lab3/: CMakeLists.txt  README.md
lab3/include/: proc_runner.hpp
lab3/src/: proc_runner_posix.cpp  proc_runner_win.cpp
lab3/tests/: proc_test.cpp
labs/: lab7_setup_kiosk_kali.sh  lab7_setup_kiosk_min.sh
labs/lab03-counter/: CMakeLists.txt  main.cpp
labs/lab4/: .gitignore  CMakeLists.txt  README.md
labs/lab4/src/: temp_logger.cpp  temp_logger.cpp.bak  temp_sim.cpp
labs/lab5/: .gitignore  CMakeLists.txt  README.md
labs/lab5/src/: temp_logger.cpp  temp_sim.cpp
labs/lab5/web/: index.html
labs/lab6/: .gitignore  CMakeLists.txt  README.md  build_kali.sh  setup_lab6_all.sh  smoke_http_kali.sh
labs/lab6/data/: measurements.csv
labs/lab6/src/: MainWindow.cpp  MainWindow.h  main.cpp  main.cpp~  temp_server.cpp
labs/lab7/: README.md
proc-runner/: CMakeLists.txt
proc-runner/examples/: proc_test.cpp
proc-runner/include/: proc_runner.h
proc-runner/src/: proc_runner.cpp
scripts/: build_win.cmd
src/: main.cpp
